@@ -20,17 +20,17 @@ package org.apache.giraph.comm;
 
 import org.apache.giraph.graph.Edge;
 import org.apache.giraph.graph.Vertex;
+/*if[HADOOP_NON_SECURE]
+ else[HADOOP_NON_SECURE]*/
 import org.apache.giraph.hadoop.BspTokenSelector;
+import org.apache.hadoop.security.token.TokenInfo;
+/*end[HADOOP_NON_SECURE]*/
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
 import org.apache.hadoop.ipc.VersionedProtocol;
-import org.apache.hadoop.security.token.TokenInfo;
 
 import java.io.IOException;
 
-/*if[HADOOP_NON_SECURE]
- else[HADOOP_NON_SECURE]*/
-/*end[HADOOP_NON_SECURE]*/
 
 /**
  * Basic interface for communication between workers.
