@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+ 
+  GIRAPH-271: Regression in imports in CommunicationsInterface (netj
+  via aching).
 
   GIRAPH-267: Jobs can get killed for not reporting status during
   INPUT SUPERSTEP (netj via aching).
